--- a/.github/workflows/build-qv2ray-cmake.yml
+++ b/.github/workflows/build-qv2ray-cmake.yml
@@ -35,7 +35,7 @@ jobs:
           path: artifacts.tgz
           key: CommonCache-${{ matrix.cross_os }}-${{ matrix.cross_arch }}-${{ hashFiles('libs/*.sh', 'go_status', '*.txt') }}
       - name: Install Golang
-        if: steps.cache-common.outputs.cache-hit != 'true'
+        #if: steps.cache-common.outputs.cache-hit != 'true'
         uses: actions/setup-go@v3
         with:
           go-version: ^1.21
